<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/Input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/backColor"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="48sp"
        android:text="@string/Calculate"
        android:gravity="end|bottom"/>
    <!--android:text="@string/Calculate"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <!--onClick은 지금은 안쓰는 메소드이고 최대한 안쓰는 것이 좋지만 이번 코드에서는 onClickListner를 버튼마다
        지정해주면 크기가 너무 커지기 떄문에 간단하게 짜기 위해 임의로 사용.-->
        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onClear"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/clear"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <!--onClick은 지금은 안쓰는 메소드이고 최대한 안쓰는 것이 좋지만 이번 코드에서는 onClickListner를 버튼마다
        지정해주면 크기가 너무 커지기 떄문에 간단하게 짜기 위해 임의로 사용.-->
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_7"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_8"
            tools:ignore="UsingOnClickInXml"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_9"
            tools:ignore="UsingOnClickInXml"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Divide"
            tools:ignore="UsingOnClickInXml"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_4"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_5"
            tools:ignore="UsingOnClickInXml"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Plus"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_1"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_2"
            tools:ignore="UsingOnClickInXml"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_3"
            tools:ignore="UsingOnClickInXml"/>
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Minus"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">



        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDemicalPoint"
            android:text="@string/Dot"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Multiply"
            tools:ignore="UsingOnClickInXml"/>
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:text="@string/Equals"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>




</LinearLayout>